--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
             <li class="legend-btn" category="drought-wildfire"><span class="legend-symbol"></span> Drought Wildfire</li>
             <li class="legend-btn" category="severe-storm"><span class="legend-symbol"></span> Severe Storm</li>
             <li class="legend-btn" category="flooding"><span class="legend-symbol"></span> Flooding</li>
-        </ul>
+        </ul> -->
 
-        <svg id="timeline"></svg>
+        <svg id="histogramcontraceptives"></svg>
+        <!--<svg id="histogramliteracyrates"></svg>-->
 
-        <div id="tooltip"></div> -->
+        <div id="tooltip"></div>
     
         <!-- D3 bundle -->
         <script src="js/d3.v6.min.js"></script>
 
         <!-- Our JS code - INCLUDING the new files-->
         <script src="js/main.js"></script>
+        <script src="js/histogramcontraceptives.js"></script>
     </body>
 </html>
