reorder scripts in HTML file, add literacy rates histogram (basically copy/paste of contraceptive histogram)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul> -->
 
         <svg id="histogramcontraceptives"></svg>
-        <!--<svg id="histogramliteracyrates"></svg>-->
+        <svg id="histogramliteracyrates"></svg>
 
         <div id="tooltip"></div>
     
@@ -24,7 +24,8 @@
         <script src="js/d3.v6.min.js"></script>
 
         <!-- Our JS code - INCLUDING the new files-->
-        <script src="js/main.js"></script>
         <script src="js/histogramcontraceptives.js"></script>
+        <script src="js/histogramliteracyrates.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
